Add meta files and package info
Signed-off-by: Dries Vints <dries.vints@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "prologue/alerts",
-    "description": "",
+    "description": "Prologue Alerts is a package that handles global site messages.",
+    "keywords": ["alerts", "messages", "laravel"],
+    "license": "MIT",
     "authors": [
         {
             "name": "Dries Vints",
