--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x",
-        "illuminate/config": "4.0.x"
+        "illuminate/config": "4.0.x",
+        "illuminate/session": "4.0.x",
+        "illuminate/support": "4.0.x"
     },
     "autoload": {
         "psr-0": {
