--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "illuminate/session": "4.0.x",
         "illuminate/support": "4.0.x"
     },
+    "require-dev": {
+        "mockery/mockery": "0.7.2"
+    },
     "autoload": {
         "psr-0": {
             "Prologue\\Alerts": "src/"
