--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.3.0",
         "illuminate/config": "4.0.x",
         "illuminate/session": "4.0.x",
-        "illuminate/support": "4.0.x"
+        "illuminate/support": "4.0.x",
+        "prologue/support": "1.0.x"
     },
     "require-dev": {
         "mockery/mockery": "0.7.2"
