--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: php
 
-php: 
-  - 5.3
+php:
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
