--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,21 @@
     "authors": [
         {
             "name": "Dries Vints",
-            "email": "dries.vints@gmail.com"
+            "email": "dries.vints@gmail.com",
+            "homepage": "http://driesvints.com",
+            "role": "Maintainer"
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.4.0",
         "illuminate/config": "~4",
         "illuminate/session": "~4",
         "illuminate/support": "~4",
-        "prologue/support": "1.0.x"
+        "prologue/support": "1.0.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.1.*",
-        "mockery/mockery": "0.9.*"
+        "phpunit/phpunit": "~4.1",
+        "mockery/mockery": "~0.9"
     },
     "autoload": {
         "psr-4": {
