--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,17 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
+  - hhvm-nightly
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install --dev
 
 script: phpunit
+
+matrix:
+  allowed_failures:
+    - php: 7.0
+    - php: hhvm-nightly
