--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ php:
   - 5.5
   - 5.6
   - 7.0
+  - 7.1
+  - 7.2
   - hhvm
 
 before_script:
@@ -15,4 +17,4 @@ script: phpunit
 
 matrix:
   allowed_failures:
-    - php: 7.0
+    - php: hhvm
