--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - 7.0
   - 7.1
   - 7.2
-  - hhvm
+  - 7.3
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
@@ -17,4 +17,4 @@ script: phpunit
 
 matrix:
   allowed_failures:
-    - php: hhvm
+    - php: 7.3
