testing Laravel 6 support

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
+  - 8.0
+  - nightly
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
@@ -17,4 +20,6 @@ script: phpunit
 
 matrix:
   allowed_failures:
+    - php: nightly
     - php: 7.3
+    - php: 8.0
