--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,20 @@
             "name": "Dries Vints",
             "email": "dries.vints@gmail.com",
             "homepage": "http://driesvints.com",
+            "role": "Creator"
+        },
+        {
+            "name": "Cristian Tabacitu",
+            "email": "hello@tabacitu.ro",
+            "homepage": "http://tabacitu.ro",
             "role": "Maintainer"
         }
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/config": "~5",
-        "illuminate/session": "~5",
-        "illuminate/support": "~5"
+        "illuminate/config": "~5|~6",
+        "illuminate/session": "~5|~6",
+        "illuminate/support": "~5|~6"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
