--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/config": "~5|~6",
-        "illuminate/session": "~5|~6",
-        "illuminate/support": "~5|~6"
+        "illuminate/config": "~5|~6|~7",
+        "illuminate/session": "~5|~6|~7",
+        "illuminate/support": "~5|~6|~7"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
