--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/config": "~5|~6|~7|~8",
-        "illuminate/session": "~5|~6|~7|~8",
-        "illuminate/support": "~5|~6|~7|~8"
+        "illuminate/config": "~9",
+        "illuminate/session": "~9",
+        "illuminate/support": "~9"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
@@ -36,6 +35,11 @@
         "psr-4": {
             "Prologue\\Alerts\\Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit --testdox",
+        "test-failing": "vendor/bin/phpunit --order-by=defects --stop-on-failure",
+        "test-coverage": "XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-text"
     },
     "minimum-stability": "dev",
     "extra": {
