--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "prologue/alerts",
     "description": "Prologue Alerts is a package that handles global site messages.",
-    "keywords": ["alerts", "messages", "laravel"],
+    "keywords": [
+        "alerts",
+        "messages",
+        "laravel"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -18,13 +22,13 @@
         }
     ],
     "require": {
-        "illuminate/config": "~9",
-        "illuminate/session": "~9",
-        "illuminate/support": "~9"
+        "illuminate/config": "^10.0",
+        "illuminate/session": "^10.0",
+        "illuminate/support": "^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.1",
-        "mockery/mockery": "~0.9"
+        "phpunit/phpunit": "^9.5.10",
+        "mockery/mockery": "^1.4.4"
     },
     "autoload": {
         "psr-4": {
