--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "prologue/alerts",
     "description": "Prologue Alerts is a package that handles global site messages.",
-    "keywords": ["alerts", "messages", "laravel"],
+    "keywords": [
+        "alerts",
+        "messages",
+        "laravel"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -18,12 +22,12 @@
         }
     ],
     "require": {
-        "illuminate/config": "~9|^10",
-        "illuminate/session": "~9|^10",
-        "illuminate/support": "~9|^10"
+        "illuminate/config": "~9|^10|^11.0",
+        "illuminate/session": "~9|^10|^11.0",
+        "illuminate/support": "~9|^10|^11.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
+        "phpunit/phpunit": "^9|^10.5",
         "mockery/mockery": "^1.0"
     },
     "autoload": {
